# books

./: .travis.yml  Makefile.am  README.md  books.pc.in  configure.ac
m4/: sxe-dfp754.m4
snap/: snapcraft.yaml
src/: Makefile.am  book2book.c  book2book.yuck  books.c  books.h  booksnap.c  booksnap.yuck  btree.c  btree.h  btree_val.h  dfp754_d32.c  dfp754_d32.h  dfp754_d64.c  dfp754_d64.h  hash.c  hash.h  nifty.h  xquo.c  xquo.h
test/: Makefile.am  book2book_01.clit  book2book_02.clit  book2book_03.clit  book2book_04.clit  book2book_05.clit  book2book_06.clit  book2book_07.clit  book2book_08.clit  book2book_09.clit  book2book_10.clit  book2book_11.clit  book2book_12.clit  book2book_13.clit  book2book_14.clit  book2book_15.clit  book2book_16.clit  book2book_17.clit  book2book_18.clit  book2book_19.clit  book2book_20.clit  book2book_21.clit  book2book_22.clit  book2book_23.clit  book2book_24.clit  book_pdo_01.c  book_top_01.c  book_top_02.c  book_top_03.c  booksnap_01.clit  booksnap_02.clit  booksnap_03.clit  booksnap_04.clit  booksnap_05.clit  booksnap_06.clit  booksnap_07.clit  booksnap_08.clit  booksnap_09.clit  booksnap_10.clit  booksnap_11.clit  (+17 more)
